Fixed blue block for spacing

--- a/my-app/src/Mine/Node.css
+++ b/my-app/src/Mine/Node.css
@@ -5,3 +5,8 @@
     display: inline-block;
     vertical-align: top;
   }
+
+.temp{
+  width: 25px;
+  height: 25px;
+}
